post user changes
